--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+ice<!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>David K. Mock - Data Analyst</title>
+    <title>David K. Mock - Data Analyst Apprentice</title>
     <!-- Tailwind CSS CDN for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
